--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
@@ -38,6 +38,7 @@
     <None Remove="Designers\ImageClassificationVisslDesigner.xaml" />
     <None Remove="Designers\ObjectDetectionEDDesigner.xaml" />
     <None Remove="Designers\ProcessScopeDesigner.xaml" />
+    <None Remove="Designers\QuestionAnsweringRBS2Designer.xaml" />
     <None Remove="Designers\TextTranslationTMDesigner.xaml" />
   </ItemGroup>
   <!-- Package Icon -->
@@ -94,6 +95,10 @@
     </Page>
     <Page Include="Designers\ProcessScopeDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </Page>
+    <Page Include="Designers\QuestionAnsweringRBS2Designer.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
     <Page Include="Designers\TextTranslationTMDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
