--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom/_4thIR.Custom.csproj
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom/_4thIR.Custom.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Enums\" />
+    <Folder Include="Models\ImageClassification\Facebook\Diet\Distilled\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
