--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
@@ -34,6 +34,8 @@
   <ItemGroup>
     <None Remove="Designers\DocumentClassificationKYCDesigner.xaml" />
     <None Remove="Designers\ImageClassificationCVDesigner.xaml" />
+    <None Remove="Designers\ImageClassificationFDeitBaseDesigner.xaml" />
+    <None Remove="Designers\ImageClassificationFDitBaseDesigner.xaml" />
     <None Remove="Designers\ImageClassificationR50Designer.xaml" />
     <None Remove="Designers\ImageClassificationVisslDesigner.xaml" />
     <None Remove="Designers\NameEntityRecognitionFlairDesigner.xaml" />
@@ -89,6 +91,13 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </Page>
     <Page Include="Designers\ImageClassificationCVDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
+    <Page Include="Designers\ImageClassificationFDeitBaseDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </Page>
+    <Page Include="Designers\ImageClassificationFDitBaseDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
