--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
@@ -47,6 +47,7 @@
     <None Remove="Designers\PartOfSpeechIdentificationFlairDesigner.xaml" />
     <None Remove="Designers\ProcessScopeDesigner.xaml" />
     <None Remove="Designers\QuestionAnsweringRBS2Designer.xaml" />
+    <None Remove="Designers\SentimentAnalysisDeBertaDesigner.xaml" />
     <None Remove="Designers\TextClassificationZSRDesigner.xaml" />
     <None Remove="Designers\TextGenerationFairseqDesigner.xaml" />
     <None Remove="Designers\TextGenerationTransformersDesigner.xaml" />
@@ -149,6 +150,10 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </Page>
     <Page Include="Designers\QuestionAnsweringRBS2Designer.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
+    <Page Include="Designers\SentimentAnalysisDeBertaDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
