--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
@@ -35,6 +35,7 @@
     <None Remove="Designers\DocumentClassificationKYCDesigner.xaml" />
     <None Remove="Designers\ImageClassificationCVDesigner.xaml" />
     <None Remove="Designers\ImageClassificationEfficientNetB1Designer.xaml" />
+    <None Remove="Designers\ImageClassificationFacebookLevit128SDesigner.xaml" />
     <None Remove="Designers\ImageClassificationFDeitBaseDesigner.xaml" />
     <None Remove="Designers\ImageClassificationFDitBaseDesigner.xaml" />
     <None Remove="Designers\ImageClassificationMSwinBaseDesigner.xaml" />
@@ -106,6 +107,10 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
     <Page Include="Designers\ImageClassificationEfficientNetB1Designer.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
+    <Page Include="Designers\ImageClassificationFacebookLevit128SDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
