--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
@@ -60,6 +60,7 @@
     <None Remove="Designers\TextSummarizationBBDesigner.xaml" />
     <None Remove="Designers\TextSummarizationBert2BertSmallDesigner.xaml" />
     <None Remove="Designers\TextSummarizationFairseqDesigner.xaml" />
+    <None Remove="Designers\TextSummarizerBartLargeDesigner.xaml" />
     <None Remove="Designers\TextTranslationMtTransformers2Designer.xaml" />
     <None Remove="Designers\TextTranslationTMDesigner.xaml" />
   </ItemGroup>
@@ -207,6 +208,9 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
     <Page Include="Designers\TextSummarizationFairseqDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </Page>
+    <Page Include="Designers\TextSummarizerBartLargeDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </Page>
     <Page Include="Designers\TextTranslationMtTransformers2Designer.xaml">
