--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
@@ -50,6 +50,7 @@
     <None Remove="Designers\NameEntityRecognitionFairseqDesigner.xaml" />
     <None Remove="Designers\NameEntityRecognitionFlairDesigner.xaml" />
     <None Remove="Designers\ObjectDetectionEDDesigner.xaml" />
+    <None Remove="Designers\ObjectDetectionFasterRCNNResnet50fpnDesigner.xaml" />
     <None Remove="Designers\PartOfSpeechIdentificationFlairDesigner.xaml" />
     <None Remove="Designers\ProcessScopeDesigner.xaml" />
     <None Remove="Designers\QuestionAnsweringRBS2Designer.xaml" />
@@ -172,6 +173,9 @@
     <Page Include="Designers\ObjectDetectionEDDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
+    <Page Include="Designers\ObjectDetectionFasterRCNNResnet50fpnDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </Page>
     <Page Include="Designers\PartOfSpeechIdentificationFlairDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
