--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Designers\DocumentClassificationKYCDesigner.xaml" />
+    <None Remove="Designers\FormulaRecognitionOpenVinoDesigner.xaml" />
     <None Remove="Designers\ImageClassificationCVDesigner.xaml" />
     <None Remove="Designers\ImageClassificationEfficientNetB1Designer.xaml" />
     <None Remove="Designers\ImageClassificationFacebookLevit128SDesigner.xaml" />
@@ -106,6 +107,10 @@
     </Page>
     <Page Include="Designers\DocumentClassificationKYCDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </Page>
+    <Page Include="Designers\FormulaRecognitionOpenVinoDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
     <Page Include="Designers\ImageClassificationCVDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
