--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
@@ -32,6 +32,7 @@
     <PackageVersion>0.1.1</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Designers\AgeClassificationGoogleVitBaseDesigner.xaml" />
     <None Remove="Designers\DocumentClassificationKYCDesigner.xaml" />
     <None Remove="Designers\FormulaRecognitionOpenVinoDesigner.xaml" />
     <None Remove="Designers\HandwrittenTextRecognitionOpenVinoDesigner.xaml" />
@@ -112,6 +113,9 @@
       <Generator>XamlIntelliSenseFileGenerator</Generator>
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
+    <Page Include="Designers\AgeClassificationGoogleVitBaseDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </Page>
     <Page Include="Designers\DocumentClassificationKYCDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
