--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
@@ -74,6 +74,7 @@
     <None Remove="Designers\TextClassificationZSRDesigner.xaml" />
     <None Remove="Designers\TextGenerationFairseqDesigner.xaml" />
     <None Remove="Designers\TextGenerationGpt2Designer.xaml" />
+    <None Remove="Designers\TextGenerationOpenaiGptDesigner.xaml" />
     <None Remove="Designers\TextGenerationTransformersDesigner.xaml" />
     <None Remove="Designers\TextSummarizationBBDesigner.xaml" />
     <None Remove="Designers\TextSummarizationBert2BertSmallDesigner.xaml" />
@@ -281,6 +282,9 @@
     <Page Include="Designers\TextGenerationGpt2Designer.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
+    <Page Include="Designers\TextGenerationOpenaiGptDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </Page>
     <Page Include="Designers\TextGenerationTransformersDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
