--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities.Design/_4thIR.Custom.Activities.Design.csproj
@@ -67,7 +67,9 @@
     <None Remove="Designers\PoseEstimationMmPoseDesigner.xaml" />
     <None Remove="Designers\PoseEstimationResnet101Designer.xaml" />
     <None Remove="Designers\ProcessScopeDesigner.xaml" />
+    <None Remove="Designers\QuestionAnsweringIntelDynamicTinybertDesigner.xaml" />
     <None Remove="Designers\QuestionAnsweringRBS2Designer.xaml" />
+    <None Remove="Designers\QuestionAnsweringXLMRobertaBaseSquad2Designer.xaml" />
     <None Remove="Designers\SemanticSegmantationSegformerDesigner.xaml" />
     <None Remove="Designers\SemanticSegmentationPSPNetDesigner.xaml" />
     <None Remove="Designers\SentimentAnalysisDeBertaDesigner.xaml" />
@@ -80,6 +82,7 @@
     <None Remove="Designers\TextSummarizationBBDesigner.xaml" />
     <None Remove="Designers\TextSummarizationBert2BertSmallDesigner.xaml" />
     <None Remove="Designers\TextSummarizationFairseqDesigner.xaml" />
+    <None Remove="Designers\TextSummarizationMeetingSummaryFacebookBartLargeDesigner.xaml" />
     <None Remove="Designers\TextSummarizerBartLargeDesigner.xaml" />
     <None Remove="Designers\TextTranslationMtTransformers2Designer.xaml" />
     <None Remove="Designers\TextTranslationTMDesigner.xaml" />
@@ -258,7 +261,15 @@
     <Page Include="Designers\ProcessScopeDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </Page>
+    <Page Include="Designers\QuestionAnsweringIntelDynamicTinybertDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
     <Page Include="Designers\QuestionAnsweringRBS2Designer.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
+    <Page Include="Designers\QuestionAnsweringXLMRobertaBaseSquad2Designer.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
@@ -305,6 +316,10 @@
     </Page>
     <Page Include="Designers\TextSummarizationFairseqDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </Page>
+    <Page Include="Designers\TextSummarizationMeetingSummaryFacebookBartLargeDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
     <Page Include="Designers\TextSummarizerBartLargeDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
